--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.15",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^18",
