--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/forms": "^0.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
